Rename class to start for frontend

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <input type="time" id="starttime">
-  <button type="button" onclick="toggleclass();" class="button" id="centertoggle">Classes</button>
+  <button type="button" onclick="toggleclass();" class="button" id="centertoggle">Starts</button>
 
   <div id="input">
     <input type="checkbox" id="sixmin">6min start</input>
@@ -33,8 +33,8 @@
   </div>
 
   <div id="classbuttons" class="buttondiv">
-    <button class="button" onclick="addstart();">Add Class</button>
-    <button class="button" onclick="delstart();">Remove Last Class</button>
+    <button class="button" onclick="addstart();">Add Start</button>
+    <button class="button" onclick="delstart();">Remove Last Start</button>
   </div>
 
   <div class="credits">
